--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="flex h-screen place-items-center justify-center">
     <!-- Intro Page -->
     <div id="intro" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-    <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://drive.google.com/uc?id=1-P47wGJa1Ai94D1zLYS8Jog2LbHGVWgX" alt="Astro looking up.">
+    <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://i.postimg.cc/653nvBzx/IMG-1935.jpg" alt="Astro looking up.">
     <div class="flex flex-col justify-between p-4 leading-normal">
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">How well do you know pugs?</h5>
         <p class="flex mb-3 justify-center font-normal text-gray-900 dark:text-gray-400">Take the quiz to test your pug knowledge.</p>
@@ -20,7 +20,7 @@
     <!-- Question 1 -->
         <div id="question1" class="hidden">
             <div class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://drive.google.com/uc?id=12l7hAaB1LHk-GVTxviczJUMR6C3D_dHE" alt="Astro sleeps">
+                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://i.postimg.cc/3wBbwKn0/Screenshot-2023-12-07-at-22-54-14.png" alt="Astro sleeps">
                 <div class="flex flex-col justify-between p-4 leading-normal">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">How well do you know pugs?</h5>
                     <p class="mb-3 font-normal text-gray-900 dark:text-gray-400">How many hours a day do pugs sleep?</p>
@@ -45,7 +45,7 @@
     <!--Question 2-->
         <div id="question2" class="hidden">
             <div class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://drive.google.com/uc?id=1Cd-H283IUgHrZf5jVwcPfnc0KRG_7QYM" alt="Astro running">
+                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://i.postimg.cc/htvk6QrZ/IMG-2958.jpg" alt="Astro skates">
                 <div class="flex flex-col justify-between p-4 leading-normal">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">How well do you know pugs?</h5>
                     <p class="mb-3 font-normal text-gray-900 dark:text-gray-400">How do you exercise a pug?</p>
@@ -69,7 +69,7 @@
     <!-- Question 3 -->
         <div id="question3" class="hidden">
             <div class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://drive.google.com/uc?id=1Cd-H283IUgHrZf5jVwcPfnc0KRG_7QYM" alt="Astro running">
+                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://i.postimg.cc/W4zJDVvf/IMG-2959.jpg" alt="Astro grumble">
                 <div class="flex flex-col justify-between p-4 leading-normal">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">How well do you know pugs?</h5>
                     <p class="mb-3 font-normal text-gray-900 dark:text-gray-400">A group of pugs is called...</p>
@@ -90,7 +90,7 @@
     <!-- Question 4 -->
         <div id="question4" class="hidden">
             <div class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://drive.google.com/uc?id=1Cd-H283IUgHrZf5jVwcPfnc0KRG_7QYM" alt="Astro running">
+                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://i.postimg.cc/gJLkWBH5/astrosideye.jpg" alt="Astro sideeye">
                 <div class="flex flex-col justify-between p-4 leading-normal">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">How well do you know pugs?</h5>
                     <p class="mb-3 font-normal text-gray-900 dark:text-gray-400">In which classification group do pugs belong? </p>
@@ -114,7 +114,7 @@
     <!-- Question 5 -->
         <div id="question5" class="hidden">
             <div class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://drive.google.com/uc?id=1Cd-H283IUgHrZf5jVwcPfnc0KRG_7QYM" alt="Astro running">
+                <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://i.postimg.cc/DzFz1gF4/Screenshot-2023-12-07-at-22-42-16.png" alt="Pug in black">
                 <div class="flex flex-col justify-between p-4 leading-normal">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">How well do you know pugs?</h5>
                     <p class="mb-3 font-normal text-gray-900 dark:text-gray-400">What is that movie called?</p>
@@ -139,7 +139,7 @@
     <!--Results-->
     <div id="results" class="hidden">
         <div class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-            <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://drive.google.com/uc?id=1-P47wGJa1Ai94D1zLYS8Jog2LbHGVWgX" alt="Astro looking up.">
+            <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src="https://i.postimg.cc/d064Fw9H/astrobow.png" alt="Astro xmas.">
             <div class="flex flex-col justify-between p-4 leading-normal">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">How well do you know pugs?</h5>
             <p id="scoreMessage" class="mb-3 font-normal text-gray-700 dark:text-gray-400"></p>
